# swlc

./: .gitignore  Cargo.toml  README.md  exec_swlc_gen.sh  touch_model_content.sh
swlc_cli/: Cargo.toml
swlc_cli/src/: main.rs
swlc_com/: Cargo.toml
swlc_com/src/: generated_code.rs  lib.rs
swlc_core/: Cargo.toml
swlc_core/src/: config.rs  help.rs  lib.rs  model_content.rs  model_definition.rs  search.rs  tools.rs
swlc_gen/: Cargo.toml
swlc_gen/data/input/: Habakkuk.txt  Haggai.txt  Nahum.txt  Obadiah.txt
swlc_gen/src/: funcs.rs  main.rs
swlc_gui/: Cargo.toml
swlc_gui/src/: main.rs
