[workspace]

resolver = "2"

members = [
    # CLI binary of the search program
    "swlc_cli"
    # GUI binary of the search program
    , "swlc_gui"
    # Common libraries of the search program
    , "swlc_com"
    # Generated lib 
    , "swlc_gen"
]

[workspace.package]

authors = ["Roest Dev <github.ebook242@passinbox.com>"]
categories = ["text-processing"]
# description	
documentation = "https://github.com/Roestdev/swlc/"
edition = "2021"
# exclude
homepage = "https://github.com/Roestdev/swlc/"	
# include
keywords = ["search", "hebrew", "WLC", "Westminster Leningrad Codex"]
license = "MIT OR Apache-2.0"
# license-file	
# publish
readme = "https://github.com/Roestdev/swlc/README.md"	
repository = "https://github.com/Roestdev/swlc/"
# rust-version	
version = "0.1.0"
