[workspace]
resolver = "2"
members = [
    # CLI binary of the search program
    "swlc_cli"
    # GUI binary of the search program
    , "swlc_gui"
    # Common libraries of the search program
    , "swlc_core"
    # Generated a lib 
    , "swlc_gen"
]
#
[workspace.package]
authors = ["Roest Dev <github.ebook242@passinbox.com>"]
categories = ["text-processing"]
# description	
documentation = "https://github.com/Roestdev/swlc/"
edition = "2021"
# exclude
homepage = "https://github.com/Roestdev/swlc/"	
# include
keywords = ["search", "hebrew", "WLC", "Westminster Leningrad Codex"]
license = "MIT OR Apache-2.0"
# license-file	
# publish
readme = "https://github.com/Roestdev/swlc/README.md"	
repository = "https://github.com/Roestdev/swlc/"
# rust-version	
version = "0.1.5"
#
#
[workspace.dependencies]
chrono = "0.4.38"
ctrlc-handler = "0.1.2"
directories = "5.0.1"
env_logger = "0.11.3"
error-stack = "0.4.1"
exitcode = "1.1.2"
is-even = "1.0.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.20"
regex = "1.10.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.14"

