[package]
name = "swlc_com"
version = "0.1.0"
edition = "2021"
#
description = "Common libraries for SWLC"
categories = ["text-processing"]
keywords = ["search", "hebrew", "WLC", "Westminster Leningrad Codex"]
authors = ["Roest Dev <github.ebook242@passinbox.com>"]
documentation = "https://github.com/Roestdev/swlc/"
homepage = "https://github.com/Roestdev/swlc/"	
readme = "https://github.com/Roestdev/swlc/README.md"	
repository = "https://github.com/Roestdev/swlc/"
license = "MIT OR Apache-2.0"

[dependencies]
