[package]
name = "swlc_com"
#
authors.workspace = true
categories.workspace = true
description = "Common library for SWLC"
documentation.workspace = true
edition.workspace = true
# exclude
homepage.workspace = true	
# include
keywords.workspace = true
license.workspace = true
# license-file	
# publish
readme.workspace = true	
repository.workspace = true
# rust-version	
version.workspace = true

[dependencies]
