[package]
name = "swlc_core"
#
authors.workspace = true
categories.workspace = true
description = "Core library of the  SWLC"
documentation.workspace = true
edition.workspace = true
# exclude
homepage.workspace = true	
# include
keywords.workspace = true
license.workspace = true
# license-file	
# publish
readme.workspace = true	
repository.workspace = true
# rust-version	
version.workspace = true

[dependencies]
#chrono.workspace = true 
#ctrlc-handler.workspace = true 
directories.workspace = true
#env_logger.workspace = true 
# error-stack.workspace = true 
exitcode.workspace = true
#is-even.workspace = true 
itertools.workspace = true 
lazy_static.workspace = true 
#log.workspace = true 
#regex.workspace = true
serde.workspace = true 
toml.workspace = true 
