[package]
name = "swlc_gen"
#
authors.workspace = true
categories.workspace = true
description = "Code generation for SWLC"
documentation.workspace = true
edition.workspace = true
# exclude
homepage.workspace = true	
# include
keywords.workspace = true
license.workspace = true
# license-file	
# publish
readme.workspace = true	
repository.workspace = true
# rust-version
# version
version = "0.1.0"

[dependencies]
swlc_com = {path = "../swlc_com"}