[package]
name = "swlc_gui"
#
authors.workspace = true
categories.workspace = true
description = "Contains the GUI frontend of SWLC"
documentation.workspace = true
edition.workspace = true
# exclude
homepage.workspace = true	
# include
keywords.workspace = true
license.workspace = true
# license-file	
# publish
readme.workspace = true	
repository.workspace = true
# rust-version
version.workspace = true

[dependencies]
swlc_core = {path = "../swlc_core"}